; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_strm.c_mz_stream_create.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_strm.c_mz_stream_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* (i8**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mz_stream_create(i8** %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store i8** %0, i8*** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %6 = load i8**, i8*** %4, align 8
  %7 = icmp eq i8** %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %24

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = icmp eq %struct.TYPE_3__* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %9
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i8* (i8**)*, i8* (i8**)** %14, align 8
  %16 = icmp eq i8* (i8**)* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %12, %9
  store i8* null, i8** %3, align 8
  br label %24

18:                                               ; preds = %12
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i8* (i8**)*, i8* (i8**)** %20, align 8
  %22 = load i8**, i8*** %4, align 8
  %23 = call i8* %21(i8** %22)
  store i8* %23, i8** %3, align 8
  br label %24

24:                                               ; preds = %18, %17, %8
  %25 = load i8*, i8** %3, align 8
  ret i8* %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
